--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dotenv": "^16.0.1",
     "express": "4.17.1",
     "joi": "^17.6.0",
-    "morgan": "1.10.0",
-    "shortid": "^2.2.16"
+    "mongoose": "^6.3.3",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
